--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=backend
+spring.datasource.url=jdbc:mysql://localhost:3306/medlink_db
+spring.datasource.username=root
+spring.datasource.password=
